Compilador/Compilador/Compilador/bin/compilador/Semantico/y.output
   0  $accept : programa $end

   1  programa : ID BEGIN conjunto_sentencias_declarativas conjunto_sentencias_ejecutables END ';'

   2  conjunto_sentencias_declarativas : sentencia_declarativa
   3                                   | conjunto_sentencias_declarativas sentencia_declarativa
   4                                   | BREAK ';'

   5  conjunto_sentencias_ejecutables : sentencia_ejecutable
   6                                  | conjunto_sentencias_ejecutables sentencia_ejecutable

   7  sentencia_declarativa : tipo lista_variables ';'
   8                        | tipo FUNC ID '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END ';'
   9                        | FUNC tipo ID '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'
  10                        | FUNC ID ',' lista_variables ';'
  11                        | error_sentencias_declarativas

  12  error_sentencias_declarativas : tipo ';'
  13                                | FUNC ',' lista_variables ';'
  14                                | FUNC tipo ID '(' ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'
  15                                | tipo FUNC ID '(' ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END
  16                                | FUNC tipo ID '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'

  17  conjunto_sentencias_declarativas_funcion : tipo lista_variables ';'

  18  conjunto_sentencias_ejecutables_funcion : ejecutable
  19                                          | conjunto_sentencias_ejecutables_funcion ejecutable

  20  lista_variables : ID
  21                  | lista_variables ',' ID

  22  sentencia_ejecutable : BEGIN ejecutable END ';'
  23                       | TRY ejecutable CATCH BEGIN ejecutable END ';'
  24                       | sentencia_if
  25                       | error_sentencias_ejecutables

  26  error_sentencias_ejecutables : ejecutable END ';'
  27                               | TRY ejecutable BEGIN ejecutable END ';'
  28                               | TRY ejecutable CATCH ';'
  29                               | BEGIN ejecutable END

  30  sentencia_if : IF '(' condicion ')' rama_then_sola ENDIF
  31               | IF '(' condicion ')' rama_then_sola rama_else ENDIF
  32               | error_sentencia_if

  33  error_sentencia_if : IF '(' condicion rama_then_sola ENDIF
  34                     | IF '(' condicion ')' rama_else ENDIF

  35  rama_then_sola : THEN sentencia_ejecutable

  36  rama_else : ELSE sentencia_ejecutable

  37  ejecutable : asignacion
  38             | sentencia_control_repeat
  39             | sentencia_salida

  40  sentencia_control_repeat : REPEAT '(' asignacion condicion_repeat factor ')' sentencia_ejecutable
  41                           | REPEAT '(' asignacion condicion_repeat ';' factor ')' sentencia_ejecutable BREAK ';'
  42                           | errores_repeat

  43  errores_repeat : REPEAT '(' asignacion condicion_repeat factor ')' sentencia_ejecutable
  44                 | REPEAT '(' asignacion condicion_repeat ';' factor ')' sentencia_ejecutable BREAK

  45  operador : AND
  46           | OR

  47  comparador : '<'
  48             | '>'
  49             | MENOR_IGUAL
  50             | MAYOR_IGUAL
  51             | DISTINTO
  52             | IGUAL_IGUAL

  53  sentencia_salida : PRINT '(' CADENA ')' ';'
  54                   | error_sentencia_salida

  55  error_sentencia_salida : PRINT CADENA ')'
  56                         | PRINT '(' ')'

  57  tipo : ULONG
  58       | DOUBLE
  59       | CADENA

  60  condicion_repeat : ID comparador expresion ';'

  61  asignacion : ID ASIGNACION expresion ';'

  62  condicion : condicion comparador expresion
  63            | condicion operador expresion
  64            | expresion comparador expresion

  65  expresion : expresion '+' termino
  66            | expresion '-' termino
  67            | termino

  68  termino : termino '*' factor
  69          | termino '/' factor
  70          | factor

  71  factor : ID
  72         | CTE_DOUBLE
  73         | CTE_ULONG
  74         | '-' CTE_DOUBLE

  75  parametro : tipo ID
  76            | error_parametro

  77  error_parametro : tipo

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . BEGIN conjunto_sentencias_declarativas conjunto_sentencias_ejecutables END ';'  (1)

	BEGIN  shift 3
	.  error


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : ID BEGIN . conjunto_sentencias_declarativas conjunto_sentencias_ejecutables END ';'  (1)

	CADENA  shift 4
	FUNC  shift 5
	BREAK  shift 6
	DOUBLE  shift 7
	ULONG  shift 8
	.  error

	conjunto_sentencias_declarativas  goto 9
	sentencia_declarativa  goto 10
	tipo  goto 11
	error_sentencias_declarativas  goto 12


state 4
	tipo : CADENA .  (59)

	.  reduce 59


state 5
	sentencia_declarativa : FUNC . tipo ID '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (9)
	sentencia_declarativa : FUNC . ID ',' lista_variables ';'  (10)
	error_sentencias_declarativas : FUNC . ',' lista_variables ';'  (13)
	error_sentencias_declarativas : FUNC . tipo ID '(' ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (14)
	error_sentencias_declarativas : FUNC . tipo ID '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (16)

	ID  shift 13
	CADENA  shift 4
	DOUBLE  shift 7
	ULONG  shift 8
	','  shift 14
	.  error

	tipo  goto 15


state 6
	conjunto_sentencias_declarativas : BREAK . ';'  (4)

	';'  shift 16
	.  error


state 7
	tipo : DOUBLE .  (58)

	.  reduce 58


state 8
	tipo : ULONG .  (57)

	.  reduce 57


state 9
	programa : ID BEGIN conjunto_sentencias_declarativas . conjunto_sentencias_ejecutables END ';'  (1)
	conjunto_sentencias_declarativas : conjunto_sentencias_declarativas . sentencia_declarativa  (3)

	ID  shift 17
	CADENA  shift 4
	IF  shift 18
	PRINT  shift 19
	FUNC  shift 5
	BEGIN  shift 20
	DOUBLE  shift 7
	ULONG  shift 8
	REPEAT  shift 21
	TRY  shift 22
	.  error

	conjunto_sentencias_ejecutables  goto 23
	sentencia_declarativa  goto 24
	sentencia_ejecutable  goto 25
	tipo  goto 11
	error_sentencias_declarativas  goto 12
	ejecutable  goto 26
	sentencia_if  goto 27
	error_sentencias_ejecutables  goto 28
	error_sentencia_if  goto 29
	asignacion  goto 30
	sentencia_control_repeat  goto 31
	sentencia_salida  goto 32
	errores_repeat  goto 33
	error_sentencia_salida  goto 34


state 10
	conjunto_sentencias_declarativas : sentencia_declarativa .  (2)

	.  reduce 2


state 11
	sentencia_declarativa : tipo . lista_variables ';'  (7)
	sentencia_declarativa : tipo . FUNC ID '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END ';'  (8)
	error_sentencias_declarativas : tipo . ';'  (12)
	error_sentencias_declarativas : tipo . FUNC ID '(' ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END  (15)

	ID  shift 35
	FUNC  shift 36
	';'  shift 37
	.  error

	lista_variables  goto 38


state 12
	sentencia_declarativa : error_sentencias_declarativas .  (11)

	.  reduce 11


state 13
	sentencia_declarativa : FUNC ID . ',' lista_variables ';'  (10)

	','  shift 39
	.  error


state 14
	error_sentencias_declarativas : FUNC ',' . lista_variables ';'  (13)

	ID  shift 35
	.  error

	lista_variables  goto 40


state 15
	sentencia_declarativa : FUNC tipo . ID '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (9)
	error_sentencias_declarativas : FUNC tipo . ID '(' ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (14)
	error_sentencias_declarativas : FUNC tipo . ID '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (16)

	ID  shift 41
	.  error


state 16
	conjunto_sentencias_declarativas : BREAK ';' .  (4)

	.  reduce 4


state 17
	asignacion : ID . ASIGNACION expresion ';'  (61)

	ASIGNACION  shift 42
	.  error


state 18
	sentencia_if : IF . '(' condicion ')' rama_then_sola ENDIF  (30)
	sentencia_if : IF . '(' condicion ')' rama_then_sola rama_else ENDIF  (31)
	error_sentencia_if : IF . '(' condicion rama_then_sola ENDIF  (33)
	error_sentencia_if : IF . '(' condicion ')' rama_else ENDIF  (34)

	'('  shift 43
	.  error


state 19
	sentencia_salida : PRINT . '(' CADENA ')' ';'  (53)
	error_sentencia_salida : PRINT . CADENA ')'  (55)
	error_sentencia_salida : PRINT . '(' ')'  (56)

	CADENA  shift 44
	'('  shift 45
	.  error


state 20
	sentencia_ejecutable : BEGIN . ejecutable END ';'  (22)
	error_sentencias_ejecutables : BEGIN . ejecutable END  (29)

	ID  shift 17
	PRINT  shift 19
	REPEAT  shift 21
	.  error

	ejecutable  goto 46
	asignacion  goto 30
	sentencia_control_repeat  goto 31
	sentencia_salida  goto 32
	errores_repeat  goto 33
	error_sentencia_salida  goto 34


state 21
	sentencia_control_repeat : REPEAT . '(' asignacion condicion_repeat factor ')' sentencia_ejecutable  (40)
	sentencia_control_repeat : REPEAT . '(' asignacion condicion_repeat ';' factor ')' sentencia_ejecutable BREAK ';'  (41)
	errores_repeat : REPEAT . '(' asignacion condicion_repeat factor ')' sentencia_ejecutable  (43)
	errores_repeat : REPEAT . '(' asignacion condicion_repeat ';' factor ')' sentencia_ejecutable BREAK  (44)

	'('  shift 47
	.  error


state 22
	sentencia_ejecutable : TRY . ejecutable CATCH BEGIN ejecutable END ';'  (23)
	error_sentencias_ejecutables : TRY . ejecutable BEGIN ejecutable END ';'  (27)
	error_sentencias_ejecutables : TRY . ejecutable CATCH ';'  (28)

	ID  shift 17
	PRINT  shift 19
	REPEAT  shift 21
	.  error

	ejecutable  goto 48
	asignacion  goto 30
	sentencia_control_repeat  goto 31
	sentencia_salida  goto 32
	errores_repeat  goto 33
	error_sentencia_salida  goto 34


state 23
	programa : ID BEGIN conjunto_sentencias_declarativas conjunto_sentencias_ejecutables . END ';'  (1)
	conjunto_sentencias_ejecutables : conjunto_sentencias_ejecutables . sentencia_ejecutable  (6)

	ID  shift 17
	IF  shift 18
	PRINT  shift 19
	BEGIN  shift 20
	END  shift 49
	REPEAT  shift 21
	TRY  shift 22
	.  error

	sentencia_ejecutable  goto 50
	ejecutable  goto 26
	sentencia_if  goto 27
	error_sentencias_ejecutables  goto 28
	error_sentencia_if  goto 29
	asignacion  goto 30
	sentencia_control_repeat  goto 31
	sentencia_salida  goto 32
	errores_repeat  goto 33
	error_sentencia_salida  goto 34


state 24
	conjunto_sentencias_declarativas : conjunto_sentencias_declarativas sentencia_declarativa .  (3)

	.  reduce 3


state 25
	conjunto_sentencias_ejecutables : sentencia_ejecutable .  (5)

	.  reduce 5


state 26
	error_sentencias_ejecutables : ejecutable . END ';'  (26)

	END  shift 51
	.  error


state 27
	sentencia_ejecutable : sentencia_if .  (24)

	.  reduce 24


state 28
	sentencia_ejecutable : error_sentencias_ejecutables .  (25)

	.  reduce 25


state 29
	sentencia_if : error_sentencia_if .  (32)

	.  reduce 32


state 30
	ejecutable : asignacion .  (37)

	.  reduce 37


state 31
	ejecutable : sentencia_control_repeat .  (38)

	.  reduce 38


state 32
	ejecutable : sentencia_salida .  (39)

	.  reduce 39


state 33
	sentencia_control_repeat : errores_repeat .  (42)

	.  reduce 42


state 34
	sentencia_salida : error_sentencia_salida .  (54)

	.  reduce 54


state 35
	lista_variables : ID .  (20)

	.  reduce 20


state 36
	sentencia_declarativa : tipo FUNC . ID '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END ';'  (8)
	error_sentencias_declarativas : tipo FUNC . ID '(' ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END  (15)

	ID  shift 52
	.  error


state 37
	error_sentencias_declarativas : tipo ';' .  (12)

	.  reduce 12


state 38
	sentencia_declarativa : tipo lista_variables . ';'  (7)
	lista_variables : lista_variables . ',' ID  (21)

	';'  shift 53
	','  shift 54
	.  error


state 39
	sentencia_declarativa : FUNC ID ',' . lista_variables ';'  (10)

	ID  shift 35
	.  error

	lista_variables  goto 55


state 40
	error_sentencias_declarativas : FUNC ',' lista_variables . ';'  (13)
	lista_variables : lista_variables . ',' ID  (21)

	';'  shift 56
	','  shift 54
	.  error


state 41
	sentencia_declarativa : FUNC tipo ID . '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (9)
	error_sentencias_declarativas : FUNC tipo ID . '(' ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (14)
	error_sentencias_declarativas : FUNC tipo ID . '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (16)

	'('  shift 57
	.  error


state 42
	asignacion : ID ASIGNACION . expresion ';'  (61)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	'-'  shift 61
	.  error

	expresion  goto 62
	factor  goto 63
	termino  goto 64


state 43
	sentencia_if : IF '(' . condicion ')' rama_then_sola ENDIF  (30)
	sentencia_if : IF '(' . condicion ')' rama_then_sola rama_else ENDIF  (31)
	error_sentencia_if : IF '(' . condicion rama_then_sola ENDIF  (33)
	error_sentencia_if : IF '(' . condicion ')' rama_else ENDIF  (34)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	'-'  shift 61
	.  error

	expresion  goto 65
	condicion  goto 66
	factor  goto 63
	termino  goto 64


state 44
	error_sentencia_salida : PRINT CADENA . ')'  (55)

	')'  shift 67
	.  error


state 45
	sentencia_salida : PRINT '(' . CADENA ')' ';'  (53)
	error_sentencia_salida : PRINT '(' . ')'  (56)

	CADENA  shift 68
	')'  shift 69
	.  error


state 46
	sentencia_ejecutable : BEGIN ejecutable . END ';'  (22)
	error_sentencias_ejecutables : BEGIN ejecutable . END  (29)

	END  shift 70
	.  error


state 47
	sentencia_control_repeat : REPEAT '(' . asignacion condicion_repeat factor ')' sentencia_ejecutable  (40)
	sentencia_control_repeat : REPEAT '(' . asignacion condicion_repeat ';' factor ')' sentencia_ejecutable BREAK ';'  (41)
	errores_repeat : REPEAT '(' . asignacion condicion_repeat factor ')' sentencia_ejecutable  (43)
	errores_repeat : REPEAT '(' . asignacion condicion_repeat ';' factor ')' sentencia_ejecutable BREAK  (44)

	ID  shift 17
	.  error

	asignacion  goto 71


state 48
	sentencia_ejecutable : TRY ejecutable . CATCH BEGIN ejecutable END ';'  (23)
	error_sentencias_ejecutables : TRY ejecutable . BEGIN ejecutable END ';'  (27)
	error_sentencias_ejecutables : TRY ejecutable . CATCH ';'  (28)

	BEGIN  shift 72
	CATCH  shift 73
	.  error


state 49
	programa : ID BEGIN conjunto_sentencias_declarativas conjunto_sentencias_ejecutables END . ';'  (1)

	';'  shift 74
	.  error


state 50
	conjunto_sentencias_ejecutables : conjunto_sentencias_ejecutables sentencia_ejecutable .  (6)

	.  reduce 6


state 51
	error_sentencias_ejecutables : ejecutable END . ';'  (26)

	';'  shift 75
	.  error


state 52
	sentencia_declarativa : tipo FUNC ID . '(' parametro ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END ';'  (8)
	error_sentencias_declarativas : tipo FUNC ID . '(' ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END  (15)

	'('  shift 76
	.  error


state 53
	sentencia_declarativa : tipo lista_variables ';' .  (7)

	.  reduce 7


state 54
	lista_variables : lista_variables ',' . ID  (21)

	ID  shift 77
	.  error


state 55
	sentencia_declarativa : FUNC ID ',' lista_variables . ';'  (10)
	lista_variables : lista_variables . ',' ID  (21)

	';'  shift 78
	','  shift 54
	.  error


state 56
	error_sentencias_declarativas : FUNC ',' lista_variables ';' .  (13)

	.  reduce 13


state 57
	sentencia_declarativa : FUNC tipo ID '(' . parametro ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (9)
	error_sentencias_declarativas : FUNC tipo ID '(' . ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (14)
	error_sentencias_declarativas : FUNC tipo ID '(' . parametro ')' conjunto_sentencias_declarativas_funcion BEGIN ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (16)

	CADENA  shift 4
	DOUBLE  shift 7
	ULONG  shift 8
	')'  shift 79
	.  error

	tipo  goto 80
	parametro  goto 81
	error_parametro  goto 82


state 58
	factor : ID .  (71)

	.  reduce 71


state 59
	factor : CTE_ULONG .  (73)

	.  reduce 73


state 60
	factor : CTE_DOUBLE .  (72)

	.  reduce 72


state 61
	factor : '-' . CTE_DOUBLE  (74)

	CTE_DOUBLE  shift 83
	.  error


state 62
	asignacion : ID ASIGNACION expresion . ';'  (61)
	expresion : expresion . '+' termino  (65)
	expresion : expresion . '-' termino  (66)

	';'  shift 84
	'+'  shift 85
	'-'  shift 86
	.  error


state 63
	termino : factor .  (70)

	.  reduce 70


state 64
	expresion : termino .  (67)
	termino : termino . '*' factor  (68)
	termino : termino . '/' factor  (69)

	'*'  shift 87
	'/'  shift 88
	THEN  reduce 67
	AND  reduce 67
	OR  reduce 67
	MENOR_IGUAL  reduce 67
	MAYOR_IGUAL  reduce 67
	IGUAL_IGUAL  reduce 67
	DISTINTO  reduce 67
	';'  reduce 67
	')'  reduce 67
	'<'  reduce 67
	'>'  reduce 67
	'+'  reduce 67
	'-'  reduce 67


state 65
	condicion : expresion . comparador expresion  (64)
	expresion : expresion . '+' termino  (65)
	expresion : expresion . '-' termino  (66)

	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	DISTINTO  shift 92
	'<'  shift 93
	'>'  shift 94
	'+'  shift 85
	'-'  shift 86
	.  error

	comparador  goto 95


state 66
	sentencia_if : IF '(' condicion . ')' rama_then_sola ENDIF  (30)
	sentencia_if : IF '(' condicion . ')' rama_then_sola rama_else ENDIF  (31)
	error_sentencia_if : IF '(' condicion . rama_then_sola ENDIF  (33)
	error_sentencia_if : IF '(' condicion . ')' rama_else ENDIF  (34)
	condicion : condicion . comparador expresion  (62)
	condicion : condicion . operador expresion  (63)

	THEN  shift 96
	AND  shift 97
	OR  shift 98
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	DISTINTO  shift 92
	')'  shift 99
	'<'  shift 93
	'>'  shift 94
	.  error

	rama_then_sola  goto 100
	operador  goto 101
	comparador  goto 102


state 67
	error_sentencia_salida : PRINT CADENA ')' .  (55)

	.  reduce 55


state 68
	sentencia_salida : PRINT '(' CADENA . ')' ';'  (53)

	')'  shift 103
	.  error


state 69
	error_sentencia_salida : PRINT '(' ')' .  (56)

	.  reduce 56


state 70
	sentencia_ejecutable : BEGIN ejecutable END . ';'  (22)
	error_sentencias_ejecutables : BEGIN ejecutable END .  (29)

	';'  shift 104
	ID  reduce 29
	IF  reduce 29
	ELSE  reduce 29
	ENDIF  reduce 29
	PRINT  reduce 29
	RETURN  reduce 29
	BEGIN  reduce 29
	END  reduce 29
	BREAK  reduce 29
	REPEAT  reduce 29
	TRY  reduce 29
	CATCH  reduce 29


state 71
	sentencia_control_repeat : REPEAT '(' asignacion . condicion_repeat factor ')' sentencia_ejecutable  (40)
	sentencia_control_repeat : REPEAT '(' asignacion . condicion_repeat ';' factor ')' sentencia_ejecutable BREAK ';'  (41)
	errores_repeat : REPEAT '(' asignacion . condicion_repeat factor ')' sentencia_ejecutable  (43)
	errores_repeat : REPEAT '(' asignacion . condicion_repeat ';' factor ')' sentencia_ejecutable BREAK  (44)

	ID  shift 105
	.  error

	condicion_repeat  goto 106


state 72
	error_sentencias_ejecutables : TRY ejecutable BEGIN . ejecutable END ';'  (27)

	ID  shift 17
	PRINT  shift 19
	REPEAT  shift 21
	.  error

	ejecutable  goto 107
	asignacion  goto 30
	sentencia_control_repeat  goto 31
	sentencia_salida  goto 32
	errores_repeat  goto 33
	error_sentencia_salida  goto 34


state 73
	sentencia_ejecutable : TRY ejecutable CATCH . BEGIN ejecutable END ';'  (23)
	error_sentencias_ejecutables : TRY ejecutable CATCH . ';'  (28)

	BEGIN  shift 108
	';'  shift 109
	.  error


state 74
	programa : ID BEGIN conjunto_sentencias_declarativas conjunto_sentencias_ejecutables END ';' .  (1)

	.  reduce 1


state 75
	error_sentencias_ejecutables : ejecutable END ';' .  (26)

	.  reduce 26


state 76
	sentencia_declarativa : tipo FUNC ID '(' . parametro ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END ';'  (8)
	error_sentencias_declarativas : tipo FUNC ID '(' . ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END  (15)

	CADENA  shift 4
	DOUBLE  shift 7
	ULONG  shift 8
	')'  shift 110
	.  error

	tipo  goto 80
	parametro  goto 111
	error_parametro  goto 82


state 77
	lista_variables : lista_variables ',' ID .  (21)

	.  reduce 21


state 78
	sentencia_declarativa : FUNC ID ',' lista_variables ';' .  (10)

	.  reduce 10


state 79
	error_sentencias_declarativas : FUNC tipo ID '(' ')' . conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (14)

	CADENA  shift 4
	DOUBLE  shift 7
	ULONG  shift 8
	.  error

	tipo  goto 112
	conjunto_sentencias_declarativas_funcion  goto 113


state 80
	parametro : tipo . ID  (75)
	error_parametro : tipo .  (77)

	ID  shift 114
	')'  reduce 77


state 81
	sentencia_declarativa : FUNC tipo ID '(' parametro . ')' conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (9)
	error_sentencias_declarativas : FUNC tipo ID '(' parametro . ')' conjunto_sentencias_declarativas_funcion BEGIN ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (16)

	')'  shift 115
	.  error


state 82
	parametro : error_parametro .  (76)

	.  reduce 76


state 83
	factor : '-' CTE_DOUBLE .  (74)

	.  reduce 74


state 84
	asignacion : ID ASIGNACION expresion ';' .  (61)

	.  reduce 61


state 85
	expresion : expresion '+' . termino  (65)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	'-'  shift 61
	.  error

	factor  goto 63
	termino  goto 116


state 86
	expresion : expresion '-' . termino  (66)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	'-'  shift 61
	.  error

	factor  goto 63
	termino  goto 117


state 87
	termino : termino '*' . factor  (68)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	'-'  shift 61
	.  error

	factor  goto 118


state 88
	termino : termino '/' . factor  (69)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	'-'  shift 61
	.  error

	factor  goto 119


state 89
	comparador : MENOR_IGUAL .  (49)

	.  reduce 49


state 90
	comparador : MAYOR_IGUAL .  (50)

	.  reduce 50


state 91
	comparador : IGUAL_IGUAL .  (52)

	.  reduce 52


state 92
	comparador : DISTINTO .  (51)

	.  reduce 51


state 93
	comparador : '<' .  (47)

	.  reduce 47


state 94
	comparador : '>' .  (48)

	.  reduce 48


state 95
	condicion : expresion comparador . expresion  (64)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	'-'  shift 61
	.  error

	expresion  goto 120
	factor  goto 63
	termino  goto 64


state 96
	rama_then_sola : THEN . sentencia_ejecutable  (35)

	ID  shift 17
	IF  shift 18
	PRINT  shift 19
	BEGIN  shift 20
	REPEAT  shift 21
	TRY  shift 22
	.  error

	sentencia_ejecutable  goto 121
	ejecutable  goto 26
	sentencia_if  goto 27
	error_sentencias_ejecutables  goto 28
	error_sentencia_if  goto 29
	asignacion  goto 30
	sentencia_control_repeat  goto 31
	sentencia_salida  goto 32
	errores_repeat  goto 33
	error_sentencia_salida  goto 34


state 97
	operador : AND .  (45)

	.  reduce 45


state 98
	operador : OR .  (46)

	.  reduce 46


state 99
	sentencia_if : IF '(' condicion ')' . rama_then_sola ENDIF  (30)
	sentencia_if : IF '(' condicion ')' . rama_then_sola rama_else ENDIF  (31)
	error_sentencia_if : IF '(' condicion ')' . rama_else ENDIF  (34)

	THEN  shift 96
	ELSE  shift 122
	.  error

	rama_then_sola  goto 123
	rama_else  goto 124


state 100
	error_sentencia_if : IF '(' condicion rama_then_sola . ENDIF  (33)

	ENDIF  shift 125
	.  error


state 101
	condicion : condicion operador . expresion  (63)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	'-'  shift 61
	.  error

	expresion  goto 126
	factor  goto 63
	termino  goto 64


state 102
	condicion : condicion comparador . expresion  (62)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	'-'  shift 61
	.  error

	expresion  goto 127
	factor  goto 63
	termino  goto 64


state 103
	sentencia_salida : PRINT '(' CADENA ')' . ';'  (53)

	';'  shift 128
	.  error


state 104
	sentencia_ejecutable : BEGIN ejecutable END ';' .  (22)

	.  reduce 22


state 105
	condicion_repeat : ID . comparador expresion ';'  (60)

	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	DISTINTO  shift 92
	'<'  shift 93
	'>'  shift 94
	.  error

	comparador  goto 129


state 106
	sentencia_control_repeat : REPEAT '(' asignacion condicion_repeat . factor ')' sentencia_ejecutable  (40)
	sentencia_control_repeat : REPEAT '(' asignacion condicion_repeat . ';' factor ')' sentencia_ejecutable BREAK ';'  (41)
	errores_repeat : REPEAT '(' asignacion condicion_repeat . factor ')' sentencia_ejecutable  (43)
	errores_repeat : REPEAT '(' asignacion condicion_repeat . ';' factor ')' sentencia_ejecutable BREAK  (44)

	ID  shift 58
	CTE_ULONG  shift 59
	CTE_DOUBLE  shift 60
	';'  shift 130
	'-'  shift 61
	.  error

	factor  goto 131


state 107
	error_sentencias_ejecutables : TRY ejecutable BEGIN ejecutable . END ';'  (27)

	END  shift 132
	.  error


state 108
	sentencia_ejecutable : TRY ejecutable CATCH BEGIN . ejecutable END ';'  (23)

	ID  shift 17
	PRINT  shift 19
	REPEAT  shift 21
	.  error

	ejecutable  goto 133
	asignacion  goto 30
	sentencia_control_repeat  goto 31
	sentencia_salida  goto 32
	errores_repeat  goto 33
	error_sentencia_salida  goto 34


state 109
	error_sentencias_ejecutables : TRY ejecutable CATCH ';' .  (28)

	.  reduce 28


state 110
	error_sentencias_declarativas : tipo FUNC ID '(' ')' . conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END  (15)

	CADENA  shift 4
	DOUBLE  shift 7
	ULONG  shift 8
	.  error

	tipo  goto 112
	conjunto_sentencias_declarativas_funcion  goto 134


state 111
	sentencia_declarativa : tipo FUNC ID '(' parametro . ')' conjunto_sentencias_declarativas_funcion BEGIN conjunto_sentencias_ejecutables_funcion RETURN '(' expresion ')' END ';'  (8)

	')'  shift 135
	.  error


state 112
	conjunto_sentencias_declarativas_funcion : tipo . lista_variables ';'  (17)

	ID  shift 35
	.  error

	lista_variables  goto 136


state 113
	error_sentencias_declarativas : FUNC tipo ID '(' ')' conjunto_sentencias_declarativas_funcion . BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (14)

	BEGIN  shift 137
	.  error


state 114
	parametro : tipo ID .  (75)

	.  reduce 75


state 115
	sentencia_declarativa : FUNC tipo ID '(' parametro ')' . conjunto_sentencias_declarativas_funcion BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (9)
	error_sentencias_declarativas : FUNC tipo ID '(' parametro ')' . conjunto_sentencias_declarativas_funcion BEGIN ':' '(' condicion ')' ';' RETURN '(' expresion ')' ';' END ';'  (16)

	CADENA  shift 4
	DOUBLE  shift 7
	ULONG  shift 8
	.  error

	tipo  goto 112
	conjunto_sentencias_declarativas_funcion  goto 138

